[tool.poetry]
name = "notas-musicais"
version = "0.1.0"
description = ""
authors = ["Rodigo G Martins <mrgobetti0@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
escalas = "notas_musicais.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
rich = "^13.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
black = "^24.8.0"
isort = "^5.13.2"
taskipy = "^1.13.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.33"
mkdocstrings = "^0.25.2"
mkdocstrings-python = "^1.10.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "black --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=notas_musicais -v"
post_test = "coverage html"